--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -17,7 +17,7 @@ body {
 
 }
 
-.row .col .sidebar {
+.row .col-1 .sidebar {
     background: #71b3cd;
     box-shadow: 15px 0px 8px #388a836a;
     height: 92vh;
@@ -25,7 +25,7 @@ body {
     padding-top: 50px;
 }
 
-.row .col .sidebar ul {
+.row .col-1 .sidebar ul {
     list-style-type: none
 }
 
@@ -33,7 +33,7 @@ body {
     outline: hidden;
     color: #000000;
     position: relative;
-    font-size: 17px;
+    font-size: 1rem;
     font-weight: bold;
     display: list-item;
     margin-top: 10px;
@@ -92,14 +92,66 @@ body {
 .dropdown:hover .dropdown-content {
     display: block;
 }
+.dropdown:hover::before .dropdown-content {
+    content: "Let's ";
+}
 
 
 .active {
     background: #ddd5d5;
 }
 
-.row .col.content{
-    position:relative;
+.row .col-2 .content {
+    position: absolute;
     display: flex;
     margin-right: 200px;
+    margin-top: 25px;
+    margin-left: 8rem;
+}
+
+
+@media screen and (max-width:800px) {
+    .row .col-1 .sidebar {
+        background: #71b3cd;
+        box-shadow: 15px 0px 8px #388a836a;
+        height: 100vh;
+        width: 18vh;
+        padding-top: 20px;
+    }
+
+    .side-bar .side-bar-item {
+        outline: hidden;
+        color: #000000;
+        position: relative;
+        font-size: 10px;
+        font-weight: bold;
+        display: list-item;
+        margin-top: 10px;
+        margin-left: -20px;
+        margin-right: 12px;
+        padding: 5px;
+        text-align: center;
+        cursor: pointer;
+        border-radius: 10px;
+
+    }
+
+    .dropdown-content {
+        display: none;
+        position: fixed;
+        background-color: #e7e2e2;
+        margin-left: 60px;
+        border-radius: 12px;
+        z-index: -1;
+    }
+
+    .dropdown-content .dropdown-item {
+        margin-left: -15px;
+        margin-right: 40px;
+        margin-top: 5px;
+        margin-bottom: 5px;
+        padding: 2px;
+        border-radius: 20px;
+
+    }
 }
