--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -78,7 +78,7 @@ body {
     margin-bottom: 5px;
     padding: 5px;
     border-radius: 20px;
-
+    display: inline-block;
 }
 
 .dropdown-content .dropdown-item:hover {
@@ -105,6 +105,52 @@ body {
     margin-left: 8rem;
 }
 
+
+@media screen and (max-width:800px) {
+    .row .col-1 .sidebar {
+        background: #71b3cd;
+        box-shadow: 15px 0px 8px #388a836a;
+        height: 100vh;
+        width: 15vh;
+        padding-top: 20px;
+    }
+
+    .side-bar .side-bar-item {
+        outline: hidden;
+        color: #000000;
+        position: relative;
+        font-size: 10px;
+        font-weight: bold;
+        display: list-item;
+        margin-top: 10px;
+        margin-left: -20px;
+        margin-right: 12px;
+        padding: 5px;
+        text-align: center;
+        cursor: pointer;
+        border-radius: 10px;
+
+    }
+
+    .dropdown-content {
+        display: none;
+        position: fixed;
+        background-color: #e7e2e2;
+        margin-left: 60px;
+        border-radius: 12px;
+        z-index: -1;
+    }
+
+    .dropdown-content .dropdown-item {
+        margin-left: -15px;
+        margin-right: 40px;
+        margin-top: 5px;
+        margin-bottom: 5px;
+        padding: 2px;
+        border-radius: 20px;
+
+    }
+}
 
 @media screen and (max-width:800px) {
     .row .col-1 .sidebar {
