--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -100,13 +100,13 @@ body {
 .row .col-2 .content {
     position: absolute;
     display: flex;
-    margin-right: 200px;
+    margin-right: 10px;
     margin-top: 25px;
-    margin-left: 8rem;
+    margin-left: 7rem;
 }
 
 
-@media screen and (max-width:800px) {
+@media screen and (max-width:1000px) {
     .row .col-1 .sidebar {
         background: #71b3cd;
         box-shadow: 15px 0px 8px #388a836a;
@@ -143,57 +143,17 @@ body {
 
     .dropdown-content .dropdown-item {
         margin-left: -15px;
-        margin-right: 40px;
         margin-top: 5px;
         margin-bottom: 5px;
         padding: 2px;
         border-radius: 20px;
-
-    }
-}
-
-@media screen and (max-width:800px) {
-    .row .col-1 .sidebar {
-        background: #71b3cd;
-        box-shadow: 15px 0px 8px #388a836a;
-        height: 100vh;
-        width: 18vh;
-        padding-top: 20px;
     }
 
-    .side-bar .side-bar-item {
-        outline: hidden;
-        color: #000000;
-        position: relative;
-        font-size: 10px;
-        font-weight: bold;
-        display: list-item;
-        margin-top: 10px;
-        margin-left: -20px;
-        margin-right: 12px;
-        padding: 5px;
-        text-align: center;
-        cursor: pointer;
-        border-radius: 10px;
-
-    }
-
-    .dropdown-content {
-        display: none;
-        position: fixed;
-        background-color: #e7e2e2;
-        margin-left: 60px;
-        border-radius: 12px;
-        z-index: -1;
-    }
-
-    .dropdown-content .dropdown-item {
-        margin-left: -15px;
-        margin-right: 40px;
-        margin-top: 5px;
-        margin-bottom: 5px;
-        padding: 2px;
-        border-radius: 20px;
-
+    .row .col-2 .content {
+        position: absolute;
+        display: flex;
+        margin-right: 10px;
+        margin-top: 25px;
+        margin-left: 9rem;
     }
 }
